<resources>
    <string name="app_name">Lab2</string>
    <string name="image_description" />
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="item_title">Item Title</string>
    <string name="name">abyssinian</string>
    <string name="button">Search</string>
    <string name="name_hint">"write cat type name "</string>
    <string name="button_name_text" >name</string>
    <string name="button_grooming_text">grooming</string>
    <string name="button_origin_text">playfulness</string>
    <string name="button_intelligence_text">shedding</string>
</resources>